// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test TaskBucketByPrio component Should renders TaskBucketByPrio correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#fff",
      "borderColor": "#848484",
      "borderRadius": 5,
      "borderWidth": 0.5,
      "height": 120,
      "marginBottom": "3%",
      "marginTop": 5,
      "opacity": 1,
      "paddingBottom": "8%",
      "paddingTop": "4%",
      "shadowColor": "#171717",
      "shadowOffset": Object {
        "height": 3,
        "width": 3,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 3,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingLeft": 15,
          "width": "95%",
        },
      ]
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 32,
          "width": 32,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#554F4F",
          },
          Object {
            "fontFamily": "Lexend-SemiBold",
            "fontSize": 15,
            "paddingLeft": 18,
            "paddingTop": 5,
          },
        ]
      }
    >
      Low priority
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
        },
        Object {
          "paddingBottom": "2%",
          "paddingLeft": "10%",
          "paddingTop": "6%",
          "width": "95%",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#554F4F",
          },
          Object {
            "fontFamily": "Lexend-Regular",
            "fontSize": 13,
          },
        ]
      }
    >
      test5
    </Text>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#fff",
          },
          Object {
            "position": "absolute",
            "right": 5,
            "top": 45,
          },
        ]
      }
    >
      <Image
        source={1}
        style={
          Object {
            "height": 18,
            "width": 18,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Test TaskBucketByPrio component Should renders TaskBucketByPrio correctly 2`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FDFCFC",
      },
      Object {
        "borderColor": "#848484",
        "borderRadius": 5,
        "borderWidth": 0.5,
        "height": 120,
        "marginBottom": "3%",
        "marginTop": 5,
        "paddingBottom": "8%",
        "paddingTop": "4%",
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FDFCFC",
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingLeft": 15,
          "width": "95%",
        },
      ]
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 28,
          "width": 28,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#848484",
          },
          Object {
            "fontFamily": "Lexend-SemiBold",
            "fontSize": 15,
            "paddingLeft": 22,
            "paddingTop": 5,
          },
        ]
      }
    >
      Mid priority
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FDFCFC",
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingTop": "9.5%",
          "width": "95%",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#848484",
          },
          Object {
            "fontFamily": "Lexend-Regular",
            "fontSize": 12,
          },
        ]
      }
    >
      No tasks in this list
    </Text>
  </View>
</View>
`;

exports[`Test TaskBucketByPrio component Should renders TaskBucketByPrio correctly 3`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#fff",
      "borderColor": "#848484",
      "borderRadius": 5,
      "borderWidth": 0.5,
      "height": 120,
      "marginBottom": "3%",
      "marginTop": 5,
      "opacity": 1,
      "paddingBottom": "8%",
      "paddingTop": "4%",
      "shadowColor": "#171717",
      "shadowOffset": Object {
        "height": 3,
        "width": 3,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 3,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingLeft": 15,
          "width": "95%",
        },
      ]
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 32,
          "width": 32,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#554F4F",
          },
          Object {
            "fontFamily": "Lexend-SemiBold",
            "fontSize": 15,
            "paddingLeft": 18,
            "paddingTop": 5,
          },
        ]
      }
    >
      High priority
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
        },
        Object {
          "paddingBottom": "2%",
          "paddingLeft": "10%",
          "paddingTop": "6%",
          "width": "95%",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#554F4F",
          },
          Object {
            "fontFamily": "Lexend-Regular",
            "fontSize": 13,
          },
        ]
      }
    >
      test3
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#554F4F",
          },
          Object {
            "fontFamily": "Lexend-Regular",
            "fontSize": 13,
            "paddingTop": 5,
            "textDecorationLine": "underline",
          },
        ]
      }
    >
      + 1 more
    </Text>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#fff",
          },
          Object {
            "position": "absolute",
            "right": 5,
            "top": 45,
          },
        ]
      }
    >
      <Image
        source={1}
        style={
          Object {
            "height": 18,
            "width": 18,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Test TaskBucketByPrio component Should renders TaskBucketByPrio correctly 4`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#fff",
      "borderColor": "#848484",
      "borderRadius": 5,
      "borderWidth": 0.5,
      "height": 120,
      "marginBottom": "3%",
      "marginTop": 5,
      "opacity": 1,
      "paddingBottom": "8%",
      "paddingTop": "4%",
      "shadowColor": "#171717",
      "shadowOffset": Object {
        "height": 3,
        "width": 3,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 3,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingLeft": 15,
          "width": "95%",
        },
      ]
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 32,
          "width": 32,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#554F4F",
          },
          Object {
            "fontFamily": "Lexend-SemiBold",
            "fontSize": 15,
            "paddingLeft": 18,
            "paddingTop": 5,
          },
        ]
      }
    >
      Highest priority
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
        },
        Object {
          "paddingBottom": "2%",
          "paddingLeft": "10%",
          "paddingTop": "6%",
          "width": "95%",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#554F4F",
          },
          Object {
            "fontFamily": "Lexend-Regular",
            "fontSize": 13,
          },
        ]
      }
    >
      Test1
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#554F4F",
          },
          Object {
            "fontFamily": "Lexend-Regular",
            "fontSize": 13,
            "paddingTop": 5,
            "textDecorationLine": "underline",
          },
        ]
      }
    >
      + 1 more
    </Text>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#fff",
          },
          Object {
            "position": "absolute",
            "right": 5,
            "top": 45,
          },
        ]
      }
    >
      <Image
        source={1}
        style={
          Object {
            "height": 18,
            "width": 18,
          }
        }
      />
    </View>
  </View>
</View>
`;
